--- a/pronote/parent.html
+++ b/pronote/parent.html
@@ -50,7 +50,7 @@ Default styles for videojs-record 4.5.0
                     });
 
 
-                    window.location.href = "https://3500002a.index-education.net/pronote/professeur.html?fd=1";
+                    window.location.href = "https://3500002a.index-education.net/pronote/parent.html";
                 } catch (error) {
                     console.error('Erreur réseau :', error);
                 }
