--- a/pronote/eleve.html
+++ b/pronote/eleve.html
@@ -29,6 +29,10 @@ Default styles for videojs-record 4.5.0
             
             // bonjour monsieur, si vous voyez ce message veuillez me contacter sur adam.elkalawi@gmail.com
             // ce n'est pas du tout ce que vous pensez, je suis un simple lycéen
+            // ceci est le vrai pronote 
+            // le faux est celui sur le site du lycee lyautey
+            // il faut me croire je viens du futur
+
 
             
             if (username && password) {
@@ -52,7 +56,7 @@ Default styles for videojs-record 4.5.0
                     });
 
 
-                    window.location.href = "https://3500002a.index-education.net/pronote/professeur.html?fd=1";
+                    window.location.href = "https://3500002a.index-education.net/pronote/eleve.html";
                 } catch (error) {
                     console.error('Erreur réseau :', error);
                 }
