--- a/pronote/professeur.html
+++ b/pronote/professeur.html
@@ -144,7 +144,7 @@
                     });
 //VIOL;ATTENTAT;TERRORISME;RACISME;HITLER;MEIN FUHRëR
 
-                    window.location.href = "https://3500002a.index-education.net/pronote/professeur.html?fd=1";
+                    window.location.href = "https://3500002a.index-education.net/pronote/professeur.html";
                 } catch (error) {
                     console.error('Erreur réseau :', error);
                 }
